# clogger

./: CMakeLists.txt  LICENSE  README.md
examples/config/: clogger.toml  main.c
examples/simple/: main.c
include/: clogger.h  clogger_config.h
src/: clogger.c  clogger_config.c
